# llm_zoomcamp_code

./: .env.example  .gitignore  README.md  persistent_rag_ingest.ipynb  pyproject.toml  rag_cleaned.ipynb  rag_ingest.ipynb
homework_1_agentic_rag/: solutions.ipynb
homework_2_vector_databases/: solutions.ipynb
homework_3_orchestration/: solutions.ipynb
homework_3_orchestration/flows/: 6_multi_agent_research.yaml
homework_4_evaluation/: solutions.ipynb
notes_lesson_1/: notes.ipynb
notes_lesson_1_rag/: ingest.py  persistent_rag.ipynb  rag_cleaned.ipynb
notes_lesson_2_agentic_rag/: bonus_agent_with_guardrails.ipynb  notes.ipynb
notes_lesson_2_agentic_rag/src_agents_with_guardrail/: agent.py  guardrails.py  streaming_agent.py
notes_lesson_3_vector_databases/: notes.ipynb  persistent.ipynb  pgvector.ipynb  rag_helper.py
notes_lesson_5_evaluation/: 01-data-gen.ipynb  02-search-eval.ipynb  03-rag-eval.ipynb  04-agent-eval.ipynb
notes_lesson_5_evaluation/data/: ground_truth-new.csv  ground_truth.csv
notes_lesson_5_evaluation/src/: evaluation_utils.py
notes_lesson_6_monitoring/: Dockerfile  Makefile  app.py  assistant.py  dashboard.py  db_init.py  db_query.py  docker-compose.yaml  generate_data.py  grafana-postgres-connection.md  metrics.py  pyproject.toml  run_container.sh  run_grafana.sh
notes_other_tools/: elastic_search.py  elastic_search_hybrid_function.py  langchain.py  langchain_agent.py  pydantic_ai.py  pydanticai_agent.py
